# pico-rust-test

blinky/: .pico-rs  Cargo.toml  rp2040.x
embassy-examples-rp/: Cargo.toml
embassy-examples-rp/src/: main.rs
pwm-on-led/: .gitignore  Cargo.toml  build.rs  rp2350.x
pwm_on_led/: Cargo.toml  rp2350_riscv.x
pwm_on_led/.cargo/: config.toml
pwm_on_led/src/: main.rs
ssd1306-simple/: Cargo.toml
ssd1306-simple/.cargo/: config.toml
ssd1306-simple/src/: main.rs
uart/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT
uart/src/: main.rs
usb_host_keyboard/: Cargo.toml
usb_host_keyboard/src/: main.rs
